# monty-video-transcription

./: pyproject.toml
post-processed/: 2021_10_Proposal_for_a_Roadmap_to_Machine_Intelligence.Pody7qWszHg.cp.gpt-4.1.clean.md  2021_11_Initial_Outline_of_the_Requirements_of_Monty_Modules.fBpNe0DhfPE.cp.gpt-4.1.clean.md  2022_02_Neural_Descriptor_Field_and_Vector_Neuron_Papers.IP7gvzgZAPs.cp.gpt-4.1.clean.md  2022_02_Object_Representation_Touch_Sensors_Object_Segmentation.-8JDObmHd6g.cp.gpt-4.1.clean.md  2022_03_How_Compositional_Models_are_Constructed.oudYytJk1SA.cp.gpt-4.1.clean.md  2022_05_Why_Monty_Will_Change_the_World.QFbAbsoqqXM.cp.gpt-4.1.clean.md  2022_06_Invariant_3D_Object_Recognition_Part_1.zh-5uSAe6Fc.cp.gpt-4.1.clean.md  2022_09_The_Initial_Evidence_Based_LM_and_Voting_Implementation.0Gcw1itpbWM.cp.gpt-4.1.clean.md  2022_10_Monty_Action_Policies_Hierarchy.-qPfBrTVoks.cp.gpt-4.1.clean.md  2023_01_A_Comprehensive_Overview_of_Monty_and_the_Evidence_Based_Learning_Module.bkwY4ru1xCg.cp.gpt-4.1.clean.md  2023_01_Hierarchy_in_the_Neocortex_Overview.RRiUy4hoPXY.cp.gpt-4.1.clean.md  2023_03_Monty_Compared_to_Transformers.Nq_eui-8r0A.cp.gpt-4.1.clean.md  2023_04_Hierarchical_Action_Policies.Iu45KYzSL30.cp.gpt-4.1.clean.md  2023_04_Outline_of_Constrained_Object_Models_Monty_Mapping_on_Cortical_Column.6UoCSfE59do.cp.gpt-4.1.clean.md  2024_07_Corticothalamic_Connections_Overview.DAsdG134o3g.cp.gpt-4.1.clean.md  2024_07_Minicolumns_and_Drift_Part_1.4f6bhtVWTEE.cp.gpt-4.1.clean.md  2024_07_Review_of_Biological_Learning_Rules.ulkczYudXiE.cp.gpt-4.1.clean.md  (+49 more)
(+525 files in other folders)
