[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "monty-video-transcription"
version = "0.1.0"
description = "Monty video transcript generation/download and post-processing"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "openai >=2.15.0",
    "torch >= 2.0.0",
    "yt-dlp",
    "llama-cpp-python",
    "youtube-transcript-api",
    "langchain_text_splitters",
    "github-copilot-sdk"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
